<resources>
    <string name="app_name">ProyectoFinal</string>
    <string name="estado_conexion_on">En Línea</string>
    <string name="funcionalidades">Funcionalidades</string>
    <string name="idioma">Idioma</string>
    <string name="espanol">Español</string>
    <string name="inlges">Ingles</string>
    <string name="directorio">Directorio</string>
    <string name="noticias">Noticias</string>
    <string name="estudiante">Estudiante</string>
    <string name="sugerencias">Sugerencias</string>
    <string name="pagina">Página Oficial</string>
    <string name="horario">Horario</string>
    <string name="mapa">Mapa</string>
    <string name="ayuda">Ayuda</string>
    <string name="objetos">Objetos Perdidos</string>
    <string name="construccion">En Construcción</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contactos">Contactos</string>
    <string name="login">Login de Usuarios</string>
    <string name="nombre">Nombre</string>
    <string name="ingresar">Ingresar</string>
    <string name="codigo">Código</string>
</resources>
