<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jammsoft.proyectofinal.Principal"
    android:background="@color/verde1">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView6"
        android:src="@drawable/logo"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/login"
        android:id="@+id/textView22"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txtUsuario"
        android:layout_marginTop="30dp"
        android:hint="@string/codigo" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/txtPassword"
        android:layout_marginTop="15dp"
        android:hint="******" />

    <Button
        android:layout_width="119dp"
        android:layout_height="wrap_content"
        android:text="@string/ingresar"
        android:id="@+id/btnIngreso"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp" />
</LinearLayout>
