<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/fondo_negro">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/verde1"
        android:layout_gravity="center_horizontal"
        android:gravity="center">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="57dp"
            android:id="@+id/imageView2"
            android:src="@drawable/logo"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.31"
        android:background="@color/verde2"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/idioma"
            android:id="@+id/textView3" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="7">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal">

            <ImageButton
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/imageButton"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/spain"
                android:onClick="clicIdiomaEs" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/espanol"
                android:id="@+id/textView4"
                android:layout_gravity="center_horizontal"
                android:textColor="#ffffff"
                android:textSize="25dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal">

            <ImageButton
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/imageButton2"
                android:src="@drawable/usa"
                android:onClick="clicIdiomaEn" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/inlges"
                android:id="@+id/textView5"
                android:layout_gravity="center_horizontal"
                android:textColor="#ffffff"
                android:textSize="25dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/verde1"
        android:gravity="center">

        <ImageView
            android:layout_width="51dp"
            android:layout_height="65dp"
            android:id="@+id/imageView3"
            android:src="@drawable/logo" />
    </LinearLayout>
</LinearLayout>